<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#C6FF00"
    android:transitionGroup="true"
    tools:context="com.example.francisco.bluetoothpractica.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrinc"
        android:textSize="33dp"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <Button
        android:text="@string/txtBtnTO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/buttonTO"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:onClick="on"
        />

    <Button
        android:text="@string/txtBtnTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonTO"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:id="@+id/buttonTD"
        android:onClick="off"
        />

    <Button
        android:text="@string/txtBtnDV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDV"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/buttonTO"
        android:layout_alignRight="@+id/buttonTO"
        android:layout_alignEnd="@+id/buttonTO"
        android:onClick="visible"
        />

    <TextView
        android:text="@string/txtDE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:id="@+id/textView2"
        android:textColor="#000000"
        />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/buttonTD"
        android:layout_alignEnd="@+id/buttonTD" />

    <Button
        android:text="@string/txtBtnLD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLD"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/buttonTD"
        android:layout_alignStart="@+id/buttonTD"
        android:onClick="list"/>

</RelativeLayout>
